# OpenGL_Space

./: .gitignore  CMakeLists.txt  README.md  checklist.txt
.cache/clangd/index/: Camera.cpp.C9F08CCA668717C9.idx  Camera.h.623537730FBC517C.idx  Collision.cpp.945E73D1A0CC34C0.idx  CollisionComponentPoly.h.50FD2BE543FA01C8.idx  CollisionSystem.cpp.D9820815AD6655A9.idx  CollisionSystem.h.56F6D9F664047B8A.idx  Command.h.C912923451D08AA7.idx  ECS.h.8861507879AB94B7.idx  GameDependencies.h.9842AB9A880DDD9B.idx  HitBoxRender.cpp.F642C9DCE6CA96C8.idx  HitBoxRender.h.5762952E20238C3C.idx  Imgui.h.1ACCC8CB9E9F2EB9.idx  InputComponent.h.C524655E3873893F.idx  InputHandler.cpp.1392C07867D94727.idx  InputHandler.h.17DE25363010C9D1.idx  Json.h.8168B06CC8ABDA60.idx  Phyiscs.cpp.929D5D4F397B2D18.idx  PhysicsComponent.h.A73A93A11EB40F2F.idx  game.h.A2ED70986983F710.idx  (+46 more)
Engine/Camera/: Camera.cpp  Camera.h  camShader.vs
Engine/ECS/: CollisionComponent.h  CollisionComponentPoly.h  Components.h  ECS.h  InputComponent.h  LightsourceComponent.h  MovementComponent.h  PhysicsComponent.h  PlanetComponent.h  PositionComponent.h  RenderComponent.h  depComponents.h
Engine/Models/: Mesh.h  Model.cpp  Model.h
Engine/PhysicsEngine/: Collision.cpp  Movement.cpp  Phyiscs.cpp  Pyhsics.h  RigidBody.h
Engine/Pyhsics/: physics.cpp  physics.h
Engine/Tools/: Json.h  XMLextractPolygon.h  datastructures.h  extractColPolygon.h  utils.cpp  utils.h
Engine/assets/: Box.txt  SpaceShipCol.txt
Engine/input/: Command.h  InputHandler.cpp  InputHandler.h  keyClasses.h
Engine/jsonParser/: Json.h
Engine/math/: math.h
Engine/profiler/: guiDebugInfo.h  profiler.h
lib/: Imgui.h  json.h
lib/json/: json.h
src/: GameDependencies.h  game.cpp  game.h  game.json  main.cpp
(+42 files in other folders)
